Updated via CMS: index.html

--- a/index.html
+++ b/index.html
@@ -1162,14 +1162,14 @@ body {
                         <div class="photo-box"><div class="no-photo"><i class="fas fa-user"></i></div></div>
                         <div class="info-box">
                             <div class="designation">सरपंच</div>
-                            <div class="name">-</div>
+                            <div class="name">मा. उषा नारायण मांगले </div>
                         </div>
                     </div>
                     <div class="bearer-card">
                         <div class="photo-box"><div class="no-photo"><i class="fas fa-user"></i></div></div>
                         <div class="info-box">
                             <div class="designation">उपसरपंच</div>
-                            <div class="name">-</div>
+                            <div class="name">श्री. लहुकुमार उत्तम दड्डीकर </div>
                         </div>
                     </div></div>
             </div>
@@ -1203,7 +1203,7 @@ body {
                         <div class="photo-box"><div class="no-photo"><i class="fas fa-user"></i></div></div>
                         <div class="info-box">
                             <div class="designation">ग्रामपंचायत अधिकारी</div>
-                            <div class="name">-</div>
+                            <div class="name">सौ. पुनिता प्रदिप धनवडे </div>
                         </div>
                     </div></div>
             </div></div>
